28-12 all changes of currency code and product description alignment solved

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -323,7 +323,7 @@ button.add-line-item-button {
 	font-size: 11px;
 	word-wrap: break-word;
 	max-height: 80px;
-	white-space: pre-wrap;
+	white-space: pre-line;
 	color: #a4a4a4;
 }
 .selected-items-display
